# crypto-portfolio-tracker

./: .env.example  LICENSE  README.md  app.py  config.py  logger.py  pyproject.toml
data/: holdings.csv  token_metadata.json
data/snapshots/: 0x17bb6b65b7b5bd3651782ccf2e01c2c9c34ea0fb_20251227_070541.csv  0x17bb6b65b7b5bd3651782ccf2e01c2c9c34ea0fb_20251227_214516.csv  0x2b09197141080f9dcfd2976cfdcf4e2a7d9cf483_20251219_235745.csv  0x2b09197141080f9dcfd2976cfdcf4e2a7d9cf483_20251220_002515.csv  0x2b09197141080f9dcfd2976cfdcf4e2a7d9cf483_20251220_012840.csv  0x2b09197141080f9dcfd2976cfdcf4e2a7d9cf483_20251220_202204.csv  0xd92293daca6bbed57f8cb6d498b48ea93e035e99_20251220_203607.csv
portfolio/: calculator.py  models.py  multi_chain.py  prices.py  pricing.py  storage.py
portfolio/analytics/: allocation.py  exposure.py  performance.py  provenance.py  summary.py
portfolio/cache/: sqlite.py  token_metadata.py
portfolio/chains/: __init__.py  assembler.py  evm.py  provider.py  registry.py
portfolio/filters/: scam.py  stablecoins.py
portfolio/merge/: deduplicate.py  keys.py
portfolio/wallets/: alchemy.py  covalent.py  erc20.py  erc20_discovery.py  ethereum_erc20.py  evm.py  evm_tokens.py  normalize.py  utils.py
services/: exporter.py
static/: styles.css
templates/: dashboard.html  snapshots.html  wallet_input.html
tests/: test_alchemy_discovery.py  test_calculator.py
ui/: app.py
ui/routes/: portfolio.py
ui/templates/: dashboard.html
